# serializer version: 1
# name: test_switch_state_snapshot[ac][switch.air_conditioner_anion-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.air_conditioner_anion',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Anion',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Anion',
    'platform': 'midea',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'anion',
    'unique_id': '12345678_anion',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_state_snapshot[ac][switch.air_conditioner_anion-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Air Conditioner Anion',
    }),
    'context': <ANY>,
    'entity_id': 'switch.air_conditioner_anion',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_switch_state_snapshot[ac][switch.air_conditioner_auxiliary_heating-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.air_conditioner_auxiliary_heating',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Auxiliary heating',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Auxiliary heating',
    'platform': 'midea',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'aux_heating',
    'unique_id': '12345678_aux_heating',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_state_snapshot[ac][switch.air_conditioner_auxiliary_heating-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Air Conditioner Auxiliary heating',
    }),
    'context': <ANY>,
    'entity_id': 'switch.air_conditioner_auxiliary_heating',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switch_state_snapshot[ac][switch.air_conditioner_outdoor_silent_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.air_conditioner_outdoor_silent_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Outdoor silent mode',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Outdoor silent mode',
    'platform': 'midea',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'out_silent',
    'unique_id': '12345678_out_silent',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_state_snapshot[ac][switch.air_conditioner_outdoor_silent_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Air Conditioner Outdoor silent mode',
    }),
    'context': <ANY>,
    'entity_id': 'switch.air_conditioner_outdoor_silent_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_switch_state_snapshot[ac][switch.air_conditioner_prompt_tone-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.air_conditioner_prompt_tone',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Prompt tone',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Prompt tone',
    'platform': 'midea',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'prompt_tone',
    'unique_id': '12345678_prompt_tone',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_state_snapshot[ac][switch.air_conditioner_prompt_tone-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Air Conditioner Prompt tone',
    }),
    'context': <ANY>,
    'entity_id': 'switch.air_conditioner_prompt_tone',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switch_state_snapshot[ac][switch.air_conditioner_screen_display-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.air_conditioner_screen_display',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Screen display',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Screen display',
    'platform': 'midea',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'screen_display',
    'unique_id': '12345678_screen_display',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_state_snapshot[ac][switch.air_conditioner_screen_display-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Air Conditioner Screen display',
    }),
    'context': <ANY>,
    'entity_id': 'switch.air_conditioner_screen_display',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switch_state_snapshot[ac][switch.air_conditioner_self_clean-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.air_conditioner_self_clean',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Self clean',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Self clean',
    'platform': 'midea',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'self_clean',
    'unique_id': '12345678_self_clean',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_state_snapshot[ac][switch.air_conditioner_self_clean-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Air Conditioner Self clean',
    }),
    'context': <ANY>,
    'entity_id': 'switch.air_conditioner_self_clean',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_switch_state_snapshot[ac][switch.air_conditioner_smart_eye-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.air_conditioner_smart_eye',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Smart eye',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Smart eye',
    'platform': 'midea',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'smart_eye',
    'unique_id': '12345678_smart_eye',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_state_snapshot[ac][switch.air_conditioner_smart_eye-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Air Conditioner Smart eye',
    }),
    'context': <ANY>,
    'entity_id': 'switch.air_conditioner_smart_eye',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_switch_state_snapshot[ac][switch.air_conditioner_sound-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.air_conditioner_sound',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Sound',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Sound',
    'platform': 'midea',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'sound',
    'unique_id': '12345678_sound',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_state_snapshot[ac][switch.air_conditioner_sound-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Air Conditioner Sound',
    }),
    'context': <ANY>,
    'entity_id': 'switch.air_conditioner_sound',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switch_state_snapshot[c3][switch.heat_pump_wi_fi_controller_disinfect-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.heat_pump_wi_fi_controller_disinfect',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Disinfect',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Disinfect',
    'platform': 'midea',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'disinfect',
    'unique_id': '12345678_disinfect',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_state_snapshot[c3][switch.heat_pump_wi_fi_controller_disinfect-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Heat Pump Wi-Fi Controller Disinfect',
    }),
    'context': <ANY>,
    'entity_id': 'switch.heat_pump_wi_fi_controller_disinfect',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_switch_state_snapshot[c3][switch.heat_pump_wi_fi_controller_tbh-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.heat_pump_wi_fi_controller_tbh',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'TBH',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'TBH',
    'platform': 'midea',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'tbh',
    'unique_id': '12345678_tbh',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_state_snapshot[c3][switch.heat_pump_wi_fi_controller_tbh-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Heat Pump Wi-Fi Controller TBH',
    }),
    'context': <ANY>,
    'entity_id': 'switch.heat_pump_wi_fi_controller_tbh',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_switch_state_snapshot[c3][switch.heat_pump_wi_fi_controller_zone_1_curve-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.heat_pump_wi_fi_controller_zone_1_curve',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Zone 1 curve',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Zone 1 curve',
    'platform': 'midea',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'zone1_curve',
    'unique_id': '12345678_zone1_curve',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_state_snapshot[c3][switch.heat_pump_wi_fi_controller_zone_1_curve-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Heat Pump Wi-Fi Controller Zone 1 curve',
    }),
    'context': <ANY>,
    'entity_id': 'switch.heat_pump_wi_fi_controller_zone_1_curve',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_switch_state_snapshot[c3][switch.heat_pump_wi_fi_controller_zone_2_curve-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.heat_pump_wi_fi_controller_zone_2_curve',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Zone 2 curve',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Zone 2 curve',
    'platform': 'midea',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'zone2_curve',
    'unique_id': '12345678_zone2_curve',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_state_snapshot[c3][switch.heat_pump_wi_fi_controller_zone_2_curve-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Heat Pump Wi-Fi Controller Zone 2 curve',
    }),
    'context': <ANY>,
    'entity_id': 'switch.heat_pump_wi_fi_controller_zone_2_curve',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switch_state_snapshot[cc][switch.mdv_wi_fi_controller_auxiliary_heating-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.mdv_wi_fi_controller_auxiliary_heating',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Auxiliary heating',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Auxiliary heating',
    'platform': 'midea',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'aux_heating',
    'unique_id': '12345678_aux_heating',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_state_snapshot[cc][switch.mdv_wi_fi_controller_auxiliary_heating-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'MDV Wi-Fi Controller Auxiliary heating',
    }),
    'context': <ANY>,
    'entity_id': 'switch.mdv_wi_fi_controller_auxiliary_heating',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switch_state_snapshot[cc][switch.mdv_wi_fi_controller_night_light-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.mdv_wi_fi_controller_night_light',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Night light',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Night light',
    'platform': 'midea',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'night_light',
    'unique_id': '12345678_night_light',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_state_snapshot[cc][switch.mdv_wi_fi_controller_night_light-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'MDV Wi-Fi Controller Night light',
    }),
    'context': <ANY>,
    'entity_id': 'switch.mdv_wi_fi_controller_night_light',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_switch_state_snapshot[cf][switch.heat_pump_auxiliary_heating-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.heat_pump_auxiliary_heating',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Auxiliary heating',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Auxiliary heating',
    'platform': 'midea',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'aux_heating',
    'unique_id': '12345678_aux_heating',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_state_snapshot[cf][switch.heat_pump_auxiliary_heating-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Heat Pump Auxiliary heating',
    }),
    'context': <ANY>,
    'entity_id': 'switch.heat_pump_auxiliary_heating',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
